--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #0d0d0d;
+  background: #f3f3f3;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,13 +13,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-
+*{
+  box-sizing: border-box;
+}
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  width: 100%;
+  max-width: 640px;
   min-height: 100vh;
+  margin: 0 auto;
 }
 
